--- a/fe/scss/partials/_pallete.scss
+++ b/fe/scss/partials/_pallete.scss
@@ -1,11 +1,12 @@
 /* SCSS HEX */
 $outer-space-crayola: #1b2f33ff;
-$hunter-green: #28502eff;
-$carrot-orange: #f18f01ff;
+$hunter-green: rgb(40, 80, 46);
+$carrot-orange: rgb(241, 143, 1);
+$theme-blue: #002240;
 $mint-cream: #f1f7edff;
 $green-yellow-crayola: #d9dd92ff;
-$green-yellow-light: rgba(27, 47, 51, 0.4);
-$green-yellow-dark: rgba(27, 47, 51, 0.6);
+$orange-bright: rgba(40, 80, 46, 0.9);
+$orange-dark: rgba(40, 80, 46, 0.7);
 
 /* SCSS Gradient */
 $gradient-top: linear-gradient(0deg, #1b2f33ff, #28502eff);
