--- a/fe/scss/partials/_pallete.scss
+++ b/fe/scss/partials/_pallete.scss
@@ -5,8 +5,8 @@ $carrot-orange: rgb(241, 143, 1);
 $theme-blue: #002240;
 $mint-cream: #f1f7edff;
 $green-yellow-crayola: #d9dd92ff;
-$orange-bright: rgba(40, 80, 46, 0.9);
-$orange-dark: rgba(40, 80, 46, 0.7);
+$orange-bright: rgb(241, 143, 1);
+$orange-dark: rgb(132, 80, 2);
 
 /* SCSS Gradient */
 $gradient-top: linear-gradient(0deg, #1b2f33ff, #28502eff);
